--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,12 @@ header {
 section {
   padding: 150px 0;
 }
+
+.masthead {
+  height: 100vh;
+  min-height: 500px;
+  background-image: url(../img/outlier-campus-BW.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
