--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,15 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-scrolling-nav/blob/master/LICENSE)
  */
 
+ /* Main Page */
 .container{
   width: 100%;
   padding-right: 15px;
   padding-left: 15px;
+}
+
+.timeline h2, .timeline h3, .timeline h4, .timeline h5, .timeline h6 {
+    margin-bottom: .5em;
 }
 
 header {
@@ -60,4 +65,289 @@ section {
   padding-right: 8em;
   padding-top: 8em;
   padding-bottom: 8em;
+}
+
+
+/* Timeline */
+#timeline {
+  overflow-x: hidden;
+  background-color: darkslategrey;
+  color: azure;
+  text-align: left;
+  background-image: url(../img/bw-meeting.jpg);
+  /* background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat */
+}
+
+
+.item-eight h3{
+  color: darkorange;
+}
+
+.reg-content-wrapper h3{
+  font-size: 2em;
+  margin-top: 18px;
+  margin-bottom: -15px;
+}
+
+
+
+@media(min-width: 1200px){
+  .mason-dixon{
+      width: 100%;
+      border-top: 3px solid azure;
+      margin-top: 250px;
+      margin-bottom: 40px;
+      text-align: left;
+  }
+
+  .reg-container {
+      position: relative;
+      display: inline-block;
+      width: 64%;
+  }
+
+  .special-south{
+      position: relative;
+      float: left;
+      width: 15%;
+      margin-top: -120px;
+  }
+
+  .reg-timeline  {
+      float: left;
+      width: 15%;
+  }  
+
+  .reg-content-wrapper{
+      width: 136px;
+      padding-left: 8px;
+      border-left: 2px solid azure;
+  }
+
+  .item-one{
+      text-align: right;
+      padding-left: 10px;
+  }
+
+  .item-one h3 {
+      margin-right: 16px;
+      padding-right: 10px;
+  }
+
+  .north {
+      margin-top: -189px;
+      margin-bottom: 210px;
+  }
+
+  .item-two {
+      margin-left: 50px;
+  }
+
+  .item-four {
+      position: relative;
+      left: 40px;
+  }
+
+  .item-six {
+      position: relative;
+      right: 40px;
+  }
+
+  .item-seven {
+      position: absolute;
+      right: -32px;
+  }
+
+  .item-eight {
+      /* margin-left: 50px; */
+      float:right;
+      /* padding-left: 15px; */
+  }
+
+  .special-south h3 {
+      font-size: 3.2em;
+  }
+
+  .item-eight h3 {
+      padding-left: 15
+  }
+
+  .clear-box-timeline {
+      padding-top: 10px;
+      padding-bottom: 14px;
+      margin-top: -42px;
+      margin-right: 16px;
+      padding-right: 10px;
+      border-right: 1px solid azure;
+  }
+
+  .orange-box-timeline {
+      background-color: rgba(240, 115, 13, 0.7);
+      padding-top: 10px;
+      padding-bottom: 14px;
+      margin-top: -42px;
+      padding-left: 15;
+      border-left: 1px solid azure;
+  }
+
+  .reg-timeline .termination-ball {
+      height: 17px;
+      width: 17px;
+      margin: -10px -16.9px;
+      border-radius: 50%;
+      background: #fc6429;
+  }
+
+  .arrow-left {
+      width: 0; 
+      height: 0; 
+      border-top: 20px solid transparent;
+      border-bottom: 20px solid transparent;
+      border-right: 20px solid azure;
+      position: absolute;
+      top: 98px;
+      right: 16px;
+  }
+
+  .arrow-right {
+      width: 0; 
+      height: 0; 
+      border-top: 20px solid transparent;
+      border-bottom: 20px solid transparent;
+      border-left: 20px solid azure;
+      position: absolute;
+      top: 98px;
+  }
+}
+    
+
+@media (max-width: 1199px){
+
+  .mason-dixon {
+  border-left: 1px solid azure;
+  margin-left: 50%;
+  }
+
+  .reg-timeline .termination-ball {
+      height: 10px;
+      width: 10px;
+      border-radius: 50%;
+      background: #fc6429;
+  }
+
+  .south {
+      margin-right: 100%;
+      margin-left: -225px;
+      text-align: left;
+  }
+
+  .special-south h3{
+      font-size: 2em;
+  }
+
+  .north, 
+  .special-south {
+      margin-left: 15px;
+  }
+
+  .reg-content-wrapper {
+      width: 204px;
+  }
+
+  .reg-content-wrapper p {
+      margin-top: 0px;
+      margin-bottom: 0px;
+  }
+
+  .north .reg-content-wrapper .termination-ball {
+      position: relative;
+      right: 20px;
+      top: -123px;
+  }
+
+  .south .reg-content-wrapper .termination-ball {
+      position: relative;
+      left: 220px;
+      top: 40px;
+  }
+
+  .item-one {
+      margin-top: -46px;
+  }
+
+  .item-one h3 {
+      position: relative;
+      left: -120px;
+      top: 138px;
+      margin-top: 0px;
+      margin-bottom: 0px;
+  }
+
+  .item-three {
+      margin-top: -31px;
+  }
+
+  .item-four {
+      position: relative;
+      top: 65px;
+      margin-top: -85px;
+  }
+
+  .item-six {
+      position: relative;
+      top: -46px;
+  }
+  
+  .item-six .reg-content-wrapper {
+      width: 195px;
+  }
+
+  .item-seven {
+      position: relative;
+      top: -46px;
+      margin-top: -31px;
+  }
+
+  .item-eight {
+      position: relative;
+      top: -46px;
+      margin-top: -50px;
+  }
+
+  .item-eight h3 {
+      margin-bottom: 3px;
+  }
+
+  .orange-box-timeline {
+      background-color: rgba(240, 115, 13, 0.7);
+      padding-top: 1px;
+      padding-left: 15px;
+      padding-bottom: 1px;
+      width: 175px;
+      margin-left: -15px;
+  }
+
+  .arrow-up {
+      position: relative;
+      top: 120px;
+      right: 26px;
+      width: 0;
+      height: 0;
+      border-left: 10px solid transparent;
+      border-right: 10px solid transparent;
+      border-bottom: 10px solid azure;
+  }
+
+  .arrow-down {
+      position: relative;
+      top: 12px;
+      right: 28px;
+      width: 0;
+      height: 0;
+      border-left: 12px solid transparent;
+      border-right: 12px solid transparent;      
+      border-top: 12px solid azure;
+    } 
 }
