--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ section {
 }
 
 #about-text{
-  background-color: gray;
+  background-color: #343a40;
   font-family: 'Montserrat';
   color: azure;
   padding-left: 5.5em; 
@@ -67,11 +67,19 @@ section {
   padding-bottom: 8em;
 }
 
+#timeline-section h2 {
+    font-size: 19rem;
+}
+
+#timeline-section .lead {
+    font-size: 1.5em;
+    font-weight: 400;
+}
 
 /* Timeline */
-#timeline {
+#timeline-section {
   overflow-x: hidden;
-  background-color: darkslategrey;
+  background-color: gray;
   color: azure;
   text-align: left;
   background-image: url(../img/bw-meeting.jpg);
@@ -88,18 +96,26 @@ section {
 .reg-content-wrapper h3{
   font-size: 2em;
   margin-top: 18px;
-  margin-bottom: -15px;
+  /* margin-bottom: -15px; */
 }
 
 
 
-@media(min-width: 1200px){
+@media(min-width: 1150px){
+  #members-strong {
+      display: none;
+  }
+
   .mason-dixon{
       width: 100%;
       border-top: 3px solid azure;
       margin-top: 250px;
       margin-bottom: 40px;
       text-align: left;
+  }
+
+  .mason-dixon h4 {
+      font-size: 1em;
   }
 
   .reg-container {
@@ -112,7 +128,7 @@ section {
       position: relative;
       float: left;
       width: 15%;
-      margin-top: -120px;
+      margin-top: -69px;
   }
 
   .reg-timeline  {
@@ -132,17 +148,19 @@ section {
   }
 
   .item-one h3 {
+      margin-bottom: 50px;
       margin-right: 16px;
       padding-right: 10px;
   }
 
   .north {
-      margin-top: -189px;
+      margin-top: -217px;
       margin-bottom: 210px;
   }
 
   .item-two {
       margin-left: 50px;
+      margin-top: -193px;
   }
 
   .item-four {
@@ -160,6 +178,10 @@ section {
       right: -32px;
   }
 
+  h4 span {
+      display: none;
+  }
+
   .item-eight {
       /* margin-left: 50px; */
       float:right;
@@ -171,8 +193,14 @@ section {
   }
 
   .item-eight h3 {
-      padding-left: 15
+      padding-left: 15;
+      margin-bottom: 50px;
   }
+
+  .orange-box-timeline h4 {
+      font-size: 1.7em;
+      font-weight: 750;
+  } 
 
   .clear-box-timeline {
       padding-top: 10px;
@@ -207,7 +235,7 @@ section {
       border-bottom: 20px solid transparent;
       border-right: 20px solid azure;
       position: absolute;
-      top: 98px;
+      top: 48px;
       right: 16px;
   }
 
@@ -218,18 +246,63 @@ section {
       border-bottom: 20px solid transparent;
       border-left: 20px solid azure;
       position: absolute;
-      top: 98px;
+      top: 48px;
   }
 }
     
 
-@media (max-width: 1199px){
+@media (max-width: 1149px){
+
+    #about-text{
+    padding-left: 2.3em;
+    padding-right: 2.5em;
+    padding-top: 3em;
+    padding-bottom: 3em;
+    }
+
+    #timeline-section {
+        background-image: none;
+        background-color: #343a40;
+    }
+
+    #timeline {
+        background-image: none;
+        background-color: #343a40;
+    }
+
+    #timeline-header{
+        background-image: url(../img/bw-meeting.jpg);
+        background-color: #343a40;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        padding-bottom: 80px;
+        padding-top: 80px;
+        margin-bottom: 40px;
+        border-bottom: 2px solid azure;
+    }
+
+    #timeline h4 {
+        font-size: 1rem;
+    }
+
+    #timeline-section h2 {
+        font-size: 7rem;
+        font-weight: 700;
+    }
+
+  #people-rock {
+      display: none;
+  }
 
   .mason-dixon {
   border-left: 1px solid azure;
   margin-left: 50%;
   }
 
+  .reg-container {
+      margin-top: 45px;
+  }
   .reg-timeline .termination-ball {
       height: 10px;
       width: 10px;
@@ -240,7 +313,7 @@ section {
   .south {
       margin-right: 100%;
       margin-left: -225px;
-      text-align: left;
+      text-align: right;
   }
 
   .special-south h3{
