--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,17 @@ section {
   /* margin-bottom: -15px; */
 }
 
+#divisions {
+    background-color: rgba(240, 115, 13);
+    font-family: 'Montserrat';
+    color: azure;
+}
+
+#divisions h2,
+#divisions h3 {
+    font-family: 'Lato';
+}
+
 
 
 @media(min-width: 1150px){
@@ -248,6 +259,48 @@ section {
       position: absolute;
       top: 48px;
   }
+
+  #divisions h2{
+      font-size: 4em;
+      font-weight: 900;
+      margin-top: 60px;
+      margin-bottom: 50px;
+  }
+
+  #divisions h3 {
+    font-size: 1.5em;
+    font-weight: 700;
+    border-bottom: 1px solid azure;
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+
+  #divisions p {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  #division-one,
+  #division-two, 
+  #division-three, 
+  #division-four {
+      border-right: 1px solid azure;
+  }  
+
+  #division-one,
+  #division-two, 
+  #division-three, 
+  #division-four,
+  #division-five {
+      padding-left: 0px;
+      padding-right: 0px;
+      margin-bottom: 85px;
+  }  
+
+
+
+
+
 }
     
 
